--- a/03-SASS/05-ej-componentes sass/styles/css/style.css
+++ b/03-SASS/05-ej-componentes sass/styles/css/style.css
@@ -100,36 +100,39 @@ select {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
+  border: 3px solid rgb(193, 224, 16);
   background-color: hsl(244deg, 38%, 16%);
   border-radius: 7px;
+  grid-template-areas: "main main main  foto foto foto" "main main main  foto foto foto" "data1 data2 data3  foto foto foto";
 }
 .caja-padre .caja-hijo1 {
-  grid-area: 1/1/3/4;
+  border: 3px solid rgb(247, 90, 0);
+  grid-area: main;
 }
 .caja-padre .caja-hijo1 span {
   color: hsl(277deg, 64%, 61%);
 }
 .caja-padre .caja-hijo2 {
-  grid-area: 3/1/4/2;
+  border: 3px solid lightseagreen;
+  grid-area: data1;
   place-self: center;
 }
 .caja-padre .caja-hijo3 {
-  grid-area: 3/2/4/3;
+  border: 3px solid lightseagreen;
+  grid-area: data2;
   place-self: center;
   padding-right: 50px;
 }
 .caja-padre .caja-hijo4 {
-  grid-area: 3/3/4/4;
+  border: 3px solid lightseagreen;
+  grid-area: data3;
   place-self: center;
   padding-right: 120px;
 }
 .caja-padre .caja-hijo5 {
-  grid-area: 1/4/4/7;
-}
-.caja-padre .caja-hijo5 img {
-  display: block;
-  width: 100%;
-  height: auto;
+  background: url(../../assets/img/image-header-desktop.jpg);
+  grid-area: foto;
+  border: 3px solid lightseagreen;
 }
 
 .tittle {
@@ -164,6 +167,12 @@ select {
   color: hsla(0deg, 0%, 100%, 0.75);
   text-align: left;
   text-transform: uppercase;
+}
+
+@media (max-width: 1001px) {
+  .caja-padre {
+    grid-template-areas: "foto" "main" "data1 " "data2" "data3";
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
