--- a/03-SASS/05-ej-componentes sass/styles/sass/style.scss
+++ b/03-SASS/05-ej-componentes sass/styles/sass/style.scss
@@ -25,9 +25,13 @@
 }
 
 
+
+
+
 .container{
-  width: 80% ;
+  width: 80%;
   max-width: 1000px;
+
   margin: 50px auto;
   background-color: var.$main-color;
 }
@@ -37,23 +41,31 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  // border: 3px solid rgb(193, 224, 16);
+  border: 3px solid rgb(193, 224, 16);
   background-color:var.$label-color;
   border-radius: 7px;
+  grid-template-areas: 
+  "main main main  foto foto foto"
+  "main main main  foto foto foto"
+  "data1 data2 data3  foto foto foto";
+  
   
   
   .caja-hijo1{
     
-    grid-area:1 / 1 / 3 / 4;
+    border:3px solid rgb(247, 90, 0);
+    // grid-area:1 / 1 / 3 / 4;
+    grid-area: main;
     span{
       color:var.$accent-color;
     }
-  
+    
   }
   
   .caja-hijo2{
-    // border:3px solid lightseagreen;
-    grid-area:3 / 1 / 4 / 2;
+    border:3px solid lightseagreen;
+    // grid-area:3 / 1 / 4 / 2;
+    grid-area: data1;
     place-self:center;
     
     
@@ -61,16 +73,18 @@
   
   
   .caja-hijo3{
-    // border:3px solid lightseagreen;
-    grid-area:3 / 2 / 4 / 3;
+    border:3px solid lightseagreen;
+    // grid-area:3 / 2 / 4 / 3;
+    grid-area: data2;
     place-self:center;
     padding-right: 50px;
     
   }
   
   .caja-hijo4{
-    // border:3px solid lightseagreen;
-    grid-area:3 / 3 / 4 / 4;
+    border:3px solid lightseagreen;
+    // grid-area:3 / 3 / 4 / 4;
+    grid-area: data3;
     place-self:center;
     padding-right: 120px;
     
@@ -79,15 +93,10 @@
   
   .caja-hijo5{
     
-    grid-area:1 / 4 / 4 / 7;
-    img{
-      display: block;
-      width:100%;
-      height: auto;
-      // border:3px solid gold;
-    
-    }
-    // border:3px solid lightseagreen;
+    background: url(../../assets/img/image-header-desktop.jpg);
+    // grid-area:1 / 4 / 4 / 7;
+    grid-area: foto;
+    border:3px solid lightseagreen;
     
   }
 }
@@ -101,7 +110,7 @@
   color:var.$tittle-color;
   text-align: left;
   padding: 50px 75px 0 50px;
-
+  
 }
 
 .text{
@@ -111,7 +120,7 @@
   color:var.$text-color;
   text-align:left;
   padding: 20px 75px 0 50px;
-
+  
 }
 
 .number{
@@ -120,7 +129,7 @@
   font-size: 20px ;
   color:var.$tittle-color;
   text-align:left;
-  // padding-top: 20px;
+  
 }
 
 .subtittle{
@@ -129,4 +138,18 @@
   color:var.$text-color;
   text-align:left;
   text-transform:uppercase;
+}
+
+
+@media (max-width:1001px){
+  .caja-padre{
+    
+    grid-template-areas: 
+    "foto"
+    "main"
+    "data1 "
+    "data2"
+    "data3";
+
+  }
 }
