--- a/03-SASS/06-ejercicio-sass/styles/sass/style.scss
+++ b/03-SASS/06-ejercicio-sass/styles/sass/style.scss
@@ -129,6 +129,10 @@ body{
         
       }
       .overlay{
-       
+        position:absolute;
+        top:0;
+        left:0;
+        right:0;
+        bottom:0;
         background-color: var.$accent-color;
       }
