--- a/03-SASS/06-ejercicio-sass/styles/css/style.css
+++ b/03-SASS/06-ejercicio-sass/styles/css/style.css
@@ -101,6 +101,7 @@ body {
 
 .padre {
   position: relative;
+  display: flex;
   margin-top: 200px;
   width: 1000px;
   height: 415px;
@@ -169,14 +170,18 @@ body {
 }
 .padre .hijo4 {
   position: absolute;
-  display: block;
+  display: flex;
   left: 50%;
   width: 500px;
   height: 415px;
 }
 
 .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background-color: hsl(277deg, 64%, 61%);
+  mix-blend-mode: multiply;
 }
 
 /*# sourceMappingURL=style.css.map */
