--- a/03-SASS/06-ejercicio-sass/styles/sass/style.scss
+++ b/03-SASS/06-ejercicio-sass/styles/sass/style.scss
@@ -35,6 +35,7 @@ body{
 }
 .padre{
   position: relative;
+  display: flex;
   margin-top: 200px;
   width: 1000px;
   height: 415px;
@@ -117,7 +118,7 @@ body{
         
         .hijo4{
           position: absolute;
-          display: block;
+          display: flex;
           left:50%;
           width:500px;
           height:415px;
@@ -129,6 +130,11 @@ body{
         
       }
       .overlay{
-
+        position: absolute;
+        width: 100%;
+        height: 100%;
         background-color: var.$accent-color;
+        // opacity:0.5;
+        mix-blend-mode: multiply;
+       
       }
