--- a/03-SASS/05-ej-componentes-sass/styles/css/style.css
+++ b/03-SASS/05-ej-componentes-sass/styles/css/style.css
@@ -171,6 +171,8 @@ select {
 
 @media (max-width: 1001px) {
   .caja-padre {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     grid-template-areas: "foto" "main" "data1 " "data2" "data3";
   }
 }
