--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/css/style.css
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/css/style.css
@@ -1,4 +1,81 @@
 @charset "UTF-8";
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+*::before,
+*::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 /*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -10770,6 +10847,82 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+body.background {
+  background: hsl(199deg, 33%, 15%);
+}
+
+.container {
+  width: 80%;
+  max-width: 800px;
+  margin: 50px auto;
+}
+
+.header {
+  border: 2px solid hotpink;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 0.4fr repeat(3, 1fr) 0.5fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-areas: "head1 head2 head3" "game1 game2 game3" "game4 game5 game6" "game7 game8 game9" "score1 score2 score3";
+}
+
+.cross {
+  color: hsl(178deg, 60%, 48%);
+}
+
+.circle {
+  color: hsl(39deg, 88%, 58%);
+}
+
+.square {
+  background-color: hsl(200deg, 35%, 19%);
+}
+
+.grey {
+  background-color: hsl(200deg, 23%, 72%);
+}
+
+p {
+  display: inline-block;
+}
+
+.caja1 {
+  grid-area: head1;
+  border: 2px solid crimson;
+  width: auto;
+  height: 35px;
+  align-self: flex-start;
+  justify-self: flex-start;
+  text-align: center;
+  font-size: 20px;
+}
+
+.caja2 {
+  grid-area: head2;
+  border: 2px solid crimson;
+  width: 150px;
+  height: 35px;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  background: hsl(200deg, 35%, 19%);
+  color: hsl(200deg, 23%, 72%);
+  border-radius: 5px;
+}
+
+.caja3 {
+  grid-area: head3;
+  border: 2px solid crimson;
+  width: 35px;
+  height: 35px;
+  font-size: 20px;
+  color: white;
+  align-self: flex-end;
+  justify-self: flex-end;
+  text-align: center;
+  background: hsl(200deg, 23%, 72%);
 }
 
 /*# sourceMappingURL=style.css.map */
