--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
@@ -1,6 +1,103 @@
+@use 'variables' as var;
 
-
+@import 'reset';
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
+
+
+
+
+
+body.background{
+  background: hsl(199, 33%, 15%);
+}
+.container{
+  width: 80% ;
+  max-width: 800px;
+  margin: 50px auto;
+
+}
+.header{
+  // display:flex;
+  // flex-direction: row;
+  // justify-content: space-between;
+  
+  border: 2px solid hotpink;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 0.4fr repeat(3, 1fr) 0.5fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    grid-template-areas:
+    "head1 head2 head3"
+    "game1 game2 game3"
+    "game4 game5 game6"
+    "game7 game8 game9"
+    "score1 score2 score3";
+    
+}
+.cross{
+  
+  color:var.$cross-color;
+}
+
+.circle{
+  
+  color:var.$circle-color;
+}
+
+.square{
+
+  background-color: var.$square-color;
+}
+
+.grey{
+  background-color: var.$grey-color;
+}
+
+
+p{
+  display: inline-block;
+  // margin:auto;
+}
+
+.caja1{
+  grid-area: head1;
+  border:2px solid crimson;
+  width:auto;
+  height:35px;
+  align-self: flex-start;
+  justify-self: flex-start;
+  text-align: center;
+  font-size: 20px;
+
+}
+
+.caja2{
+  grid-area: head2;
+  border:2px solid crimson;
+  width: 150px;
+  height:35px;
+  align-self: center;
+  justify-self: center;
+  text-align: center;
+  background: var.$square-color;
+  color:var.$grey-color;
+  border-radius: 5px;
+ 
+}
+
+.caja3{
+  grid-area: head3;
+  border:2px solid crimson;
+  width: 35px;
+  height:35px;
+  font-size: 20px;
+  color: white;
+  align-self: flex-end;
+  justify-self: flex-end;
+  text-align:center;
+  background: var.$grey-color;
+}
 
