--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
@@ -5,8 +5,19 @@
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
 
+@font-face{
+  font-family: 'Montserrat';
+  src:url(../../assets/Montserrat-Regular.ttf);
+  font-weight: 400;
+  font-style: normal;
+}
 
-
+@font-face{
+  font-family: 'Montserrat';
+  src:url(../../assets/Montserrat-Bold.ttf);
+  font-weight: 700;
+  font-style: bold;
+}
 
 
 body.background{
@@ -55,13 +66,16 @@ body.background{
   background-color: var.$grey-color;
 }
 
-.text{
 
-
-}
 p{
+  font-family: 'Montserrat';
+  font-weight: 400;
   display: inline-block;
   
+}
+h3{
+  font-family: 'Montserrat';
+  font-weight: 700;
 }
 
 
