--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
@@ -34,6 +34,8 @@ body.background{
   
   // border: 2px solid hotpink;
   display: grid;
+  // grid-template-columns: 170px 170px 170px;
+  // grid-template-rows: 50px 170px 170px 170px 70px;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 0.4fr repeat(3, 1fr) 0.5fr;
   grid-column-gap: 0px;
