--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/css/style.css
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/css/style.css
@@ -10876,7 +10876,7 @@ body.background {
   grid-template-rows: 0.4fr repeat(3, 1fr) 0.5fr;
   grid-column-gap: 0px;
   grid-row-gap: 0px;
-  gap: 5px;
+  gap: 10px;
   grid-template-areas: "head1 head2 head3" "game1 game2 game3" "game4 game5 game6" "game7 game8 game9" "score1 score2 score3";
 }
 
@@ -10894,6 +10894,17 @@ body.background {
 
 .grey {
   background-color: hsl(200deg, 23%, 72%);
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-self: flex-start;
+  justify-self: flex-start;
+  align-items: center;
+  justify-content: center;
+  text-align: start;
 }
 
 p {
@@ -10918,7 +10929,6 @@ h3, .h3 {
   align-items: center;
   justify-content: center;
   text-align: start;
-  font-size: 20px;
   margin-top: 14px;
 }
 
@@ -10927,6 +10937,7 @@ h3, .h3 {
   border: 2px solid crimson;
   width: 150px;
   height: 35px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: center;
   justify-self: center;
@@ -10934,7 +10945,6 @@ h3, .h3 {
   justify-content: center;
   text-align: center;
   background: hsl(200deg, 35%, 19%);
-  color: hsl(200deg, 23%, 72%);
   border-radius: 10px;
 }
 
@@ -10945,6 +10955,7 @@ h3, .h3 {
   height: 35px;
   font-size: 20px;
   color: rgb(92, 89, 89);
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-end;
   justify-self: flex-end;
@@ -10959,6 +10970,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-start;
   justify-self: flex-start;
@@ -10969,6 +10981,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: center;
   justify-self: center;
@@ -10981,6 +10994,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-end;
   justify-self: flex-end;
@@ -10993,6 +11007,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-start;
   justify-self: flex-start;
@@ -11005,6 +11020,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: center;
   justify-self: center;
@@ -11017,6 +11033,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-end;
   justify-self: flex-end;
@@ -11029,6 +11046,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
 }
 
 .game8 {
@@ -11036,6 +11054,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: center;
   justify-self: center;
@@ -11048,6 +11067,7 @@ h3, .h3 {
   width: 150px;
   height: 150px;
   border-radius: 10px;
+  box-shadow: 0 5px;
   display: flex;
   align-self: flex-end;
   justify-self: flex-end;
