--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
@@ -92,7 +92,7 @@ h3{
 
 .head1{
   grid-area: head1;
-  border:2px solid crimson;
+  // border:2px solid crimson;
   width: 150px;
   height:35px;
   display: flex;
@@ -108,7 +108,7 @@ h3{
 
 .head2{
   grid-area: head2;
-  border:2px solid crimson;
+  // border:2px solid crimson;
   width: 150px;
   height:35px;
   box-shadow: 0 5px;
@@ -127,7 +127,7 @@ h3{
 
 .head3{
   grid-area: head3;
-  border:2px solid crimson;
+  // border:2px solid crimson;
   width: 35px;
   height:35px;
   font-size: 20px;
