--- a/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/styles/sass/style.scss
@@ -31,6 +31,7 @@ body.background{
 
 }
 .caja-padre{
+  max-width: 400px;
   
   // border: 2px solid hotpink;
   display: grid;
@@ -70,12 +71,12 @@ body.background{
 .icon{
   width: 50px;
   height: 50px;
-  display: flex;
-  align-self: flex-start;
-  justify-self: flex-start;
-  align-items: center;
-  justify-content: center;
-  text-align:start;
+  // display: flex;
+  // align-self: flex-start;
+  // justify-self: flex-start;
+  // align-items: center;
+  // justify-content: center;
+  // text-align:start;
 }
 .text{
   font-family: 'Montserrat';
@@ -280,8 +281,8 @@ h3{
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-self: center;
-  justify-self: center;
+  align-self: flex-start;
+  justify-self: flex-start;
   align-items: center;
   justify-content: center;
 }
