--- a/07-ANGULAR-TYPESCRIPT/Angular/rutas/src/app/components/header/header.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/rutas/src/app/components/header/header.component.html
@@ -10,7 +10,10 @@
           <a class="nav-link active" routerLinkActive="active" aria-current="page" [routerLink]="['/home']">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active" [routerLink]="['/servicios']">Servicios</a>
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/prestaciones']">Prestaciones</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" [routerLink]="['/listaProductos']">Lista Productos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLinkActive="active" [routerLink]="['/contacto']">Contacto</a>
