--- a/07-ANGULAR-TYPESCRIPT/Angular/rutas/src/app/components/producto-card/producto-card.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/rutas/src/app/components/producto-card/producto-card.component.html
@@ -1,4 +1,4 @@
-<section class="shadow" [routerLink]="['/producto', miProducto.id]">
+<section [routerLink]="['/producto', miProducto.id]">
   <h2 class="text-center mt-2">{{miProducto.title}}</h2>
   <div class="m-5 ">
     <img class="img-fluid mx-auto rounded d-block" [src]="miProducto.photo">
