--- a/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/header/header.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/header/header.component.html
@@ -1,1 +1,10 @@
-<p>header works!</p>
+
+  <nav class="navbar bg-black mb-3">
+    <div class="container d-flex justify-content-center">
+      <a class="navbar-brand" href="#">
+        <img class="d-flex justify-content-start" src="../../../assets/cinematic.png" alt="Bootstrap" width="200" height="100">
+      </a>
+    </div>
+  </nav>
+
+
