--- a/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/app.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/app.component.html
@@ -1,3 +1,9 @@
-
-
-<router-outlet></router-outlet>
+<header class="sticky-top">
+    <app-header></app-header>
+</header>
+<aside *ngIf="asideVisible">
+    <app-filters></app-filters>
+</aside>
+<main class="m-4 card p-4">
+    <router-outlet></router-outlet>
+</main>
