--- a/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/character-view/character-view.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/character-view/character-view.component.html
@@ -1,1 +1,22 @@
-<p>character-view works!</p>
+<section class="card mb-3">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img [src]="character.imagen" class="img-fluid rounded-start" alt="character.nombre_real">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <div class="d-flex justify-content-between">
+                    <h1 class="card-title">{{character.nombre_real}}</h1>
+                </div>
+                <hr>
+                <h5 class="card-text">{{character.nombre_personaje}}</h5>
+                <p class="card-text">{{character.serie}}</p>
+                <p class="card-text">{{character.episodios}}</p>
+                <button class="btn btn-sm btn-warning m-1 px-4" [routerLink]="['/personajes']">Volver</button>
+                <button class="btn btn-sm btn-warning m-1" [routerLink]="['/serie', 'character.serie']">Su serie</button>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</section>
+
