--- a/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/item-list/item-list.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/series/src/app/components/item-list/item-list.component.html
@@ -1,1 +1,11 @@
-<p>item-list works!</p>
+<section>
+    <div class="d-flex justify-content-between">
+      <h2>{{this.titulo.toUpperCase()}}</h2>
+    </div>
+    <hr>
+    <div class="m-3 row">
+        <article *ngFor="let item of arrItems" class="col-12 col-md-4 col-lg-3 ">
+            <app-card [miItem]="item"></app-card>
+        </article>
+    </div>
+</section>
