--- a/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/header/header.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark nav-dark">
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container-fluid">
       <a class="navbar-brand" [routerLink]="['/dashborad']">CRM</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,6 +17,7 @@
       </div>
     </div>
   </nav>
+
 
 
 
