--- a/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/dashboard/dashboard.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/dashboard/dashboard.component.html
@@ -3,5 +3,5 @@
 </header>
 <main>
     <router-outlet></router-outlet>
-    <app-productos></app-productos>
+    <!-- <app-productos></app-productos> -->
 </main>
