--- a/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/header/header.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/header/header.component.html
@@ -7,7 +7,11 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">Nuevo Producto</a>
+            <a class="nav-link" [routerLink]="['/dashboard','new-product']">Nuevo Producto</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link " [routerLink]="['/dashboard','productos']">Productos</a>
           </li>
           
           <li class="nav-item">
