--- a/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/dashboard/form/form.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/registerAppUser/registerAppUser/src/app/components/dashboard/form/form.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="form" (ngSubmit)="getDataForm()">
     <div class ="mt-2">
       <label for="name" class="form-label">Nombre</label>
-      <input type="text" id="name"  formControlName="name" class="form-control">
+      <input type="text" id="name"  formControlName="name" class="form-control" >
     </div>
 
     <div class ="mt-2">
@@ -14,20 +14,20 @@
 
     <div class ="mt-2">
       <label for="price" class="form-label">Precio</label>
-      <input type="number" id="price"  formControlName="price" class="form-control">
+      <input type="number" id="price"  formControlName="price" class="form-control" >
     </div>
 
     <div class ="mt-2" *ngIf="arrCategorias.length > 1">
       <label for="category" class="form-label mt-3">Categoría</label>
       <select formControlName="category" id="category" class="form-select">
-        <option value="" selected>Selecciona una categoría</option>
-        <option *ngFor="let categoria of arrCategorias" [value]="categoria">{{categoria.toUpperCase()}}</option>
+        <option value=""  selected>Selecciona una categoría</option>
+        <option *ngFor="let categoria of arrCategorias" [value]="categoria">{{categoria.toUpperCase()}} </option>
       </select>
     </div>
 
     <div class ="mt-2">
       <label for="image" class="form-label">Imagen</label>
-      <input type="text" id="image"  formControlName="image" class="form-control">
+      <input type="text" id="image"  formControlName="image" class="form-control" >
     </div>
 
     <div class ="mt-2">
@@ -37,4 +37,6 @@
     
     <input type="submit" [value]="titulo" class="btn btn-danger mt-3">
   </form>
+  <app-myalert [viewAlert]="vistaAlerta" [message]="mensaje" [typeError]="tipoError"></app-myalert>
 </section>
+
