--- a/07-ANGULAR-TYPESCRIPT/Angular/marvel/src/app/components/card/card.component.css
+++ b/07-ANGULAR-TYPESCRIPT/Angular/marvel/src/app/components/card/card.component.css
@@ -16,14 +16,20 @@ figure figcaption{
   position: absolute;
   bottom: 30px;
   right: 20px;
-  background-color: rgba(0, 0, 0, 0.63);
+  background-color: rgba(247, 33, 33, 0.705);
   border-radius: 5px;
   color: rgb(255, 255, 255);
   font-weight: 600;
   padding: 5px;
+  opacity: 0;
+  transition: opacity 2s;
 }
 
 figure:hover {
- transform: scale(1.15);
+  transform: scale(1.15);  
+  box-shadow: 1px 1px 15px rgba(247, 33, 33, 0.705);
+}
 
+figure:hover figcaption {
+  opacity: 1;
 }
