--- a/07-ANGULAR-TYPESCRIPT/Angular/marvel/src/app/components/card/card.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/marvel/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
 
 <figure class="card">
     <img src={{character.thumbnail.path}}.{{character.thumbnail.extension}} [alt]= "character.name">
-    <a href=""><figcaption>{{character.name}}</figcaption></a>
+    <a [routerLink]="['/character', character.id]"><figcaption>{{character.name}}</figcaption></a>
 </figure>
