--- a/07-ANGULAR-TYPESCRIPT/Angular/Gimnasio/src/app/components/lista-clientes/lista-clientes.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/Gimnasio/src/app/components/lista-clientes/lista-clientes.component.html
@@ -1,10 +1,11 @@
+<app-nav-bar></app-nav-bar>
 <div class="clientes">
   <div class="cliente" *ngFor="let cliente of arrClientes">
-      <h2>{{cliente.nombre}} {{cliente.apellidos}}</h2>
-      <p>Dirección: {{cliente.direccion}}</p>
-      <p>Email: {{cliente.email}}</p>
-      <p>Fecha Nac.: {{cliente.fecha_nacimiento}}</p>
-      <p>Edad: {{cliente.edad}}</p>
-      <button (click)="pulsaBorrar(cliente.id)">🗑️ Borrar</button>
+    <h2>{{cliente.nombre}} {{cliente.apellidos}}</h2>
+    <p>Dirección: {{cliente.direccion}}</p>
+    <p>Email: {{cliente.email}}</p>
+    <p>Fecha Nac.: {{cliente.fecha_nacimiento}}</p>
+    <p>Edad: {{cliente.edad}}</p>
+    <button (click)="pulsaBorrar(cliente.id)">🗑️ Borrar</button>
   </div>
 </div>
