--- a/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/form-productos/form-productos.component.css
+++ b/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/form-productos/form-productos.component.css
@@ -4,17 +4,26 @@ form {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+
 }
 
-form .form-group {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
+h2 {
+  background-color: royalblue;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 30px;
 }
 
-input {
-  height: 30px;
-  border: 1px solid black;
-  border-radius: 3px;
+.button {
+  background-color: royalblue;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
+
+.btnArchive {
+  background-color: royalblue;
+  color: white;
 }
