--- a/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/form-productos/form-productos.component.html
+++ b/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/form-productos/form-productos.component.html
@@ -1,36 +1,35 @@
 <h2>Crear Producto</h2>
 <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Nombre</label>
     <input type="text" class="form-control" formControlName="name">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Descripción</label>
     <input type="text" class="form-control" formControlName="description">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Precio</label>
     <input type="number" class="form-control" formControlName="price">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Departamento</label>
     <input type="text" class="form-control" formControlName="department">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Stock</label>
     <input type="number" class="form-control" formControlName="stock">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-label">Imagen</label>
-    <input type="file" class="form-file" (change)="onChange($event)">
+    <input type="file" class="form-control btnArchive" (change)="onChange($event)">
   </div>
-  <div class="form-group">
+  <div class="mb-3">
     <label class="form-check-label">Disponibilidad</label>
     <input type="checkbox" class="form-check" formControlName="available">
   </div>
-  <input type="submit" value="Crear Producto">
+  <input class="button" type="submit" value="Crear Producto">
 </form>
-
 <div class="errores">
   <p *ngFor="let error of arrErrores">{{error}}</p>
 </div>
