--- a/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/login/login.component.css
+++ b/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/login/login.component.css
@@ -4,19 +4,20 @@ form {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+
 }
 
-form .form-group {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-}
-
-.login {
-  width: 60px;
+h2 {
   background-color: royalblue;
-  border-color: royalblue;
   color: white;
-  border-radius: 8px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+
+button {
+  background-color: royalblue;
+  width: 20%;
+  border: none;
 }
