--- a/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/productos/lista-productos/lista-productos.component.css
+++ b/07-ANGULAR-TYPESCRIPT/Angular/TiendaOnline/src/app/components/productos/lista-productos/lista-productos.component.css
@@ -1,3 +1,13 @@
+.producto {
+  background-color: royalblue;
+  color: rgb(5, 22, 77);
+  border: 1px solid black;
+  box-shadow: 2px 2px 2px black;
+  border-radius: 20px;
+  padding: 10px 30px;
+  margin-bottom: 20px;
+}
+
 .productos {
   display: flex;
   justify-content: center;
@@ -6,15 +16,15 @@
   gap: 30px;
 }
 
-.producto {
+h2 {
   background-color: royalblue;
-  color: rgb(5, 22, 77);
-  border: 1px solid black;
-  box-shadow: 2px 2px 2px black;
-  border-radius: 20px;
-  padding: 10px 30px;
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 30px;
 }
 
 .image {
-  width: 100%;
+  width: 10%;
 }
